--- a/src/UI/Loader/Loader.module.css
+++ b/src/UI/Loader/Loader.module.css
@@ -1,7 +1,9 @@
 .container {
-  margin: 0 auto;
+  position: absolute;
   margin-top: 100px;
-  width: calc(100%);
+  width: calc(100% + 400px);
+  left: 50%;
+  transform: translateX(-50%);
   position: relative;
 }
 .box {
